<resources>
    <string name="app_name">Notes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="add2">Add</string>
    <string name="note_title">Note Title</string>
    <string name="write_your_today_note_here">Write your today note here...</string>
    <string name="add_note">Add Note</string>
    <string name="update_note">Update Note</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete4">Delete</string>
</resources>