<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ReadAndUpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_bold"
            android:text="@string/update_note"
            android:gravity="center_vertical"
            android:layout_weight="8"
            android:textSize="@dimen/_16ssp"
            android:paddingVertical="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_16sdp"/>

        <ImageButton
            android:id="@+id/updateNoteBtn"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/check__2_"/>


    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/noteTitleET"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:autofillHints=""
        android:background="@null"
        android:elegantTextHeight="true"
        android:fontFamily="@font/inter_bold"
        android:hint="@string/note_title"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_16sdp"
        android:singleLine="true"
        android:textSize="@dimen/_15ssp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/noteET"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:hint="@string/write_your_today_note_here"
        android:fontFamily="@font/inter"
        android:background="@null"
        android:inputType="textMultiLine"
        android:textSize="@dimen/_14ssp"
        android:gravity="start"
        android:paddingVertical="@dimen/_12sdp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:elegantTextHeight="true"
        android:paddingHorizontal="@dimen/_15sdp"/>


</LinearLayout>