<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/boldFont"
        android:padding="@dimen/_12sdp"
        android:layout_margin="@dimen/_12sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:text="@string/delete"/>

    <TextView
        android:id="@+id/sureTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="@dimen/_16sdp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:maxLines="2"
        android:ellipsize="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:cornerRadius="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/cancel"/>

          <com.google.android.material.button.MaterialButton
              android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textColor="@color/black"
              app:cornerRadius="@dimen/_50sdp"
              android:layout_marginStart="@dimen/_12sdp"
              android:backgroundTint="@color/yellow"
            android:text="@string/delete4"/>

    </LinearLayout>

</LinearLayout>